
RRDtool - master ... 
======================

Bugfixes
--------
* Suppress warnings of implicit fall through <youpong>
* Update tarball download link in doc <c72578>
* Fix unsigned integer overflow in rrdtool first. Add test for rrd_first() <c72578>
* Fix tests under MSYS2 (Windows) <c72578>
* Fix BUILD_DATE in rrdtool help output <c72578>
* acinclude.m4: Include <stdlib.h> when using exit <ryandesign>
* rrdtool-release: Create NUMVERS from VERSION file <c72578>
* Avoids leaking of file descriptors in multi threaded programs by @ensc

Features
--------
* Remove autogenerated files from git repo (configure, Makefile.in, conftools, rrd_config.h.in) <c72578>

* Reads $RRD_LOCKING environment variable and adds --locking option to some tools. The updatex api has been also
  updated to support setting locking related bits in its extra_flags parameter. @ensc

  This allows now to choose between three kinds of locking:

    none: no locking is done at all; caller has to do it manually and can implement e.g. a timeout with alarm(2) or so
    try: fails when lock is hold by another process; users will see "ERROR: could not lock RRD". This is the default and the only possible mode with the old code
    block: waits until lock is available

  It can be used like

    env RRD_LOCKING=block rrdupdate ...

  or

    rrdupdate --locking none ...

  or

  rrd_updatex_r(filename, tmplt, RRD_FLAGS_LOCKING_MODE_BLOCK, ...);


RRDtool 1.8.0 - 2022-03-13
==========================

Bugfixes
--------
* python bindings: properly convert double values of rrd info <Stefan Gluszek>
* failed to expand 'Py_UNUSED', Invalid usage when expanding  'Py_UNUSED' <c72578>
* document --showtime in xport help output <c72578>
* fix --use-nan-for-all-missing-data <c72578>
* update rrdruby.pod <c72578>
* add missing rrdruby.pod and rrdpython.pod to dist <c72578>
* Set first_weekday to 0 (Sunday), when HAVE__NL_TIME_WEEK_1STDAY is not defined <nirgal>
* fix median calculation for all NaN inputs <c72578>